--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leon Sabir World</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -62,7 +62,7 @@
 <footer>
     <p>
         
-        ©Leon Sabir 2021,a Worrior Monk initiative.
+        © Leon Sabir 2021, a Worrior Monk initiative.
     </p>
 </footer>
 </body>
