fixed some grmatical mistakes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Welcome To</h1>
     <h1><span class="sorange"> Leon Sabir</span> World!</h1>
         <h3>Full Stack Developer - Tag Seeker</h3>
-        <p>Leon is a inconsitant nibba who is tying to be consistant at practicing web devlopment.He thinks that he can learn the way of full stack web development.For that he is building patience and mentality of working hard.</p>
+        <p>Leon is an inconsitant nibba who is tying to be consistant at practicing web devlopment.He thinks that he can learn the way of full stack web development.For that he is building patience and mentality of working hard.</p>
         <a class="link-button"href="https://www.linkedin.com/company/programminghero/" target="_blank">HIRE ME</a>
 
     </div>
