--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <footer>
     <p>
         
-        © Leon Sabir 2021, a Worrior Monk initiative.
+        © Leon Sabir 2021, a Warrior Monk initiative.
     </p>
 </footer>
 </body>
